trunk/Archive2/18/d495c404d8921a/output
main.cpp:2:2: error: 'r' does not name a type
  r   - remapped                                 |
  ^
